--- a/package.json
+++ b/package.json
@@ -16,5 +16,19 @@
   "bugs": {
     "url": "https://github.com/ariffaturahman/practice-FE-Expert-PWA/issues"
   },
-  "homepage": "https://github.com/ariffaturahman/practice-FE-Expert-PWA#readme"
+  "homepage": "https://github.com/ariffaturahman/practice-FE-Expert-PWA#readme",
+  "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^9.0.0",
+    "css-loader": "^5.2.6",
+    "eslint": "^7.28.0",
+    "html-webpack-plugin": "^5.3.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0"
+  }
 }
