--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,7 @@
         "sourceType": "module"
     },
     "rules": {
+        "no-console": 0,
+        "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
     }
 }
