--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "practice-FE-Expert-PWA",
+  "name": "movie-catalogue",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-dev": "webpack-dev-server --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -28,7 +29,7 @@
     "eslint-plugin-import": "^2.23.4",
     "html-webpack-plugin": "^5.3.1",
     "style-loader": "^2.0.0",
-    "webpack": "^4.46.0",
+    "webpack": "^5.38.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.8.0"
